kubernetes/apps/authentik/authentik/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames:
    - auth.piscio.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
